# liath-rs

./: Cargo.toml  README.md  STATUS.md  SUMMARY.md  SYSTEM_DEPS.md  TASKS.md
docs/: architecture.md  guide.md  integration.md  lua-reference.md  status.md  summary.md  system-deps.md  tasks.md  todo.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api/: agent-api.md  conversation.md  embedded-liath.md  errors.md  index.md  lua-stdlib.md  memory.md  query-executor.md  tool-state.md
documentation/docs/cli/: commands.md  index.md  interactive.md  tui.md
documentation/docs/concepts/: architecture.md  embeddings.md  index.md  namespaces.md  programmable-memory.md  vector-search.md
documentation/docs/examples/: agent-patterns.md  basic.md  index.md  multi-agent.md  rag.md  vector-search.md
documentation/docs/getting-started/: configuration.md  first-agent.md  index.md  installation.md  quick-start.md
documentation/docs/guides/: building-agents.md  conversations.md  error-handling.md  index.md  lua-scripting.md  memory-patterns.md  performance.md  security.md  tool-state.md
documentation/docs/integrations/: http-server.md  index.md  mcp-server.md  python.md
documentation/docs/stylesheets/: extra.css
examples/: agent_runtime.rs  agent_usage.rs  embedded.rs  embedding_test.rs  kv_basic.rs  lua_scripting.rs  programmable_memory.rs  vector_search.rs
lua/: examples.lua  liath.lua
lua/examples/: agent_memory.lua  conversation.lua  rag_pipeline.lua  safe_processing.lua
python/: README.md  pyproject.toml
python/liath/: __init__.py
src/: error.rs  lib.rs
src/agent/: conversation.rs  memory.rs  mod.rs  tool_state.rs  types.rs
src/ai/: embedding.rs  llm.rs  mod.rs
src/auth/: manager.rs
src/cli/: console.rs  mod.rs
src/cli/tui/: app.rs  events.rs  mod.rs  ui.rs
src/core/: fjall_wrapper.rs  mod.rs  namespace.rs  rocksdb_wrapper.rs
src/lua/: errors.rs  mod.rs  validator.rs  vm.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/python/: mod.rs
src/query/: executor.rs  parser.rs
src/server/: api.rs
src/vector/: mod.rs
tests/: lib.rs
