[package]
name = "liath"
version = "0.1.0"
edition = "2021"
description = "An AI-powered database system with key-value storage, vector search, and AI capabilities"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
license = "MIT"
repository = "https://github.com/skelf-research/liath-rs"
keywords = ["database", "ai", "llm", "key-value", "lua", "vector-search"]
categories = ["database", "ai", "web-programming"]
readme = "README.md"

[lib]
name = "liath"
path = "src/lib.rs"

[[bin]]
name = "liath"
path = "src/bin/liath.rs"

[dependencies]
rocksdb = { version = "0.20.1", features = ["multi-threaded-cf"] }
usearch = "2.0.1"
candle-core = "0.6.0"
candle-transformers = "0.6.0"
candle-examples = "0.6.0"
tokenizers = "0.13.3"
fastembed = "3"
rlua = "0.19.4"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.68"
hf-hub = "0.3.2"
axum = "0.6.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
