[package]
name = "liath"
version = "0.1.0"
edition = "2021"
description = "An AI-powered database system with key-value storage, vector search, and AI capabilities"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
license = "MIT"
repository = "https://github.com/skelf-research/liath-rs"
keywords = ["database", "ai", "llm", "key-value", "lua", "vector-search"]
categories = ["database", "ai", "web-programming"]
readme = "README.md"

[lib]
name = "liath"
path = "src/lib.rs"

[[bin]]
name = "liath"
path = "src/bin/liath.rs"

[features]
default = ["embedding", "vector"]
embedding = ["fastembed"]
vector = ["usearch"]
server = ["axum"]

[dependencies]
fjall = "2.2"
usearch = { version = "2.0.1", optional = true }
# Simplified dependencies focusing on core functionality
tokenizers = "0.19.1"
fastembed = { version = "3.14.1", optional = true }
rlua = "0.20.1"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.68"
axum = { version = "0.6.0", optional = true }
# Explicitly specify rand version to resolve conflicts
rand = "0.8.5"
half = "2.6.0"
uuid = { version = "1", features = ["v4"] }

# Resolve version conflicts
[dependencies.rand_core]
version = "0.6.4"
[dependencies.rand_distr]
version = "0.4.3"

# Force ort-sys version expected by ort 2.0.0-rc.4 to avoid API mismatches
[dependencies.ort-sys]
version = "=2.0.0-rc.4"
