[package]
name = "liath"
version = "0.1.0"
edition = "2021"
description = "An AI-powered database system with key-value storage, vector search, and AI capabilities"
default-run = "liath"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
license = "MIT"
repository = "https://github.com/skelf-research/liath-rs"
keywords = ["database", "ai", "llm", "key-value", "lua", "vector-search"]
categories = ["database", "ai", "web-programming"]
readme = "README.md"

[lib]
name = "liath"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "liath"
path = "src/bin/liath.rs"

[features]
default = ["embedding", "vector", "tui"]
embedding = ["fastembed"]
vector = ["usearch"]
server = ["axum"]
tui = ["ratatui", "crossterm"]
mcp = []
python = ["pyo3"]

[dependencies]
fjall = "2.2"
usearch = { version = "2.0.1", optional = true }
# Simplified dependencies focusing on core functionality
tokenizers = "0.19.1"
fastembed = { version = "4", optional = true }
rlua = "0.20.1"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.68"
axum = { version = "0.7", optional = true }
# TUI dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
# Explicitly specify rand version to resolve conflicts
rand = "0.8.5"
half = "2.6.0"
uuid = { version = "1", features = ["v4"] }
regex = "1.10"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Resolve version conflicts
[dependencies.rand_core]
version = "0.6.4"
[dependencies.rand_distr]
version = "0.4.3"

[dev-dependencies]
tempfile = "3"
