[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "liath"
version = "0.1.0"
description = "Programmable memory for AI agents - safe Lua execution over vector + KV storage"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dipankar Sarkar", email = "me@dipankar.name"}
]
keywords = ["ai", "agent", "memory", "vector-database", "lua", "embedding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/skelf-research/liath-rs"
Repository = "https://github.com/skelf-research/liath-rs"
Documentation = "https://github.com/skelf-research/liath-rs#readme"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "liath._liath"
strip = true
